// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`markDependents() should mark all paths given - (["marked", "pathNode"]) - [{"m4":true},["b1","b2","m4"]] 1`] = `
Map {
  "m4" => true,
  "b2" => true,
  "b1" => true,
}
`;

exports[`markDependents() should mark all paths given - (["marked", "pathNode"]) - [{"m4":true},["m1","m2","m3","m4"]] 1`] = `
Map {
  "m4" => true,
  "m3" => true,
  "m2" => true,
  "m1" => true,
}
`;

exports[`markDependents() should not mark if end node is not marked - (["marked", "pathNode"]) - [{"m2":true},["m1","m2","m3","m4"]] 1`] = `
Map {
  "m2" => true,
  "m1" => true,
}
`;

exports[`markDependents() should not mark if end node is not marked - (["marked", "pathNode"]) - [{"m2":true},["m1","m2","m3"]] 1`] = `
Map {
  "m2" => true,
  "m1" => true,
}
`;

exports[`markDependents() should not mark if end node is not marked 1`] = `
Map {
  "m2" => true,
}
`;
